<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">七彩新闻</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="landing_title">世界之窗</string>
    <string name="society_news">社会新闻</string>
    <string name="home_news">国内新闻</string>
    <string name="foreign_news">国外新闻</string>
    <string name="tech_news">科技新闻</string>
    <string name="update">自动更新</string>
    <string name="mode">夜间模式</string>
    <string name="collect">收藏网址</string>
    <string name="capture">GitHub上的我</string>
    <string name="about">关于我们</string>
    <string name="note">随身笔记</string>
    <string name="share">我的分享</string>
    <string name="cancel">取消</string>
    <string name="note_edit_hint_title">请输入标题</string>
    <string name="note_edit_hint_time">时间</string>
    <string name="note_edit_hint_weather">天气</string>
    <string name="note_edit_hint_content">请输入内容</string>
    <string name="note_edit_hint_des">请输入描述</string>
    <string name="weather_chosecity">添加城市</string>
    <string name="weather_confirm">确定</string>
    <string name="weather_cancel">取消</string>
    <string name="weather_title">天气</string>
    <string name="collection_dialog">提示!</string>
    <string name="dialog_message">是否彻底删除该信息</string>
    <string name="history_title">历史记录</string>
    <string name="keyword">请输入关键字</string>
    <string name="collection">相关收藏</string>
    <string name="safe_lock">安全锁</string>
    <string name="setting_title">设置</string>
    <string name="setting_clear_history">清除记录</string>
    <string name="setpassword">请输入密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="login">登陆</string>
    <string name="private_browsing">无痕浏览</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="city_tips">请输入城市名称</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="version_code">七彩新闻 V2.1.0</string>
    <string name="news_push">新闻推送</string>
    <string name="accout_save">账户安全</string>
    <string name="chache_clear">缓存清理</string>
    <string name="history">历史纪录</string>
</resources>