<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/menu_background"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:inputType="numberPassword"
        android:hint="@string/setpassword"
        android:background="@drawable/note_corner2"
        />
    <EditText
        android:id="@+id/login_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:inputType="numberPassword"
        android:hint="@string/confirm_password"
        android:background="@drawable/note_corner2"
        />
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login"
        />
     <Button 
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_weight="1"
        />
    </LinearLayout>
</LinearLayout>
